styles.css
body {
	background-color: #e5e5e5;
	box-sizing: border-box;
	margin: 40px 80px;
	font-family: "Inter", sans-serif;
	font-family: "Karla", sans-serif;
	display: flex;
	flex-direction: column;
}

p {
	margin: 0;
}

.display {
	display: flex;
	align-items: baseline;
	justify-content: left;
	margin-bottom: 10px;
}

.time-largeText {
	font-family: Inter;
	font-style: normal;
	font-weight: 500;
	font-size: 60px;
	color: #1f1f1f;
}

.time-smallText {
	font-family: Inter;
	font-style: normal;
	font-weight: 500;
	font-size: 10px;
	color: #1f1f1f;
}

.split-heading {
	margin-left: 10px;
	font-family: "Karla";
	font-style: normal;
	font-weight: 400;
	font-size: 30px;
	line-height: 35px;
}

.buttons {
	display: flex;
	margin-top: 25px;
	margin-left: 10px;
}

.buttons button {
	margin: 15px;
	border-radius: 50%;
	height: 60px;
	width: 60px;
	border: none;
	font-family: "Karla";
	font-style: bold;
	font-weight: 400;
	font-size: 14px;
	align-content: center;
}

.split-times {
	display: flex;
	padding: 10px;
	padding-left: 30px;
	color: #C14600;
	font-family: "Karla";
	font-style: normal;
	font-weight: 500;
	font-size: 14px;
	line-height: 21px;
}

.start-button {
	background-color: #3177FF;
}

.stop-button {
	background-color: #F82F2F;
}

.split-button {
	background-color: #FFC52F;
}

.reset-button{
	background-color: #6630FF;
}

button:disabled {
	background-color: #bdbdbd;
}

@media only screen and (min-width: 700px) {
	.buttons {
		flex-direction: row;
	}
	.time-largeText {
		font-size: 90px;
	}
	.time-smallText {
		font-size: 30px;
	}
	.buttons button {
		height: 90px;
		width: 90px;
		font-size: 20px;
	}
	.split-times {
		font-size: 18px;
	}
}

